fix: ia generator
